chore: added package.json for release purposes

--- a/production/armadillo-rserver-exposome/package.json
+++ b/production/armadillo-rserver-exposome/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@isglobal-bgre/armadillo-rserver-omics",
-  "version": "1.0.0",
-  "description": "RServe 3.6.3 container with MOLGENIS RServer 6.1.0 and dsOmics 1.x",
+  "name": "@isglobal-bgre/armadillo-rserver-exposome",
+  "version": "2.0.0",
+  "description": "RServe 3.6.3 container with MOLGENIS RServer 6.1.0 and dsExposome 2.x",
   "repository": {
     "type": "git",
     "url": "git@github.com:isglobal-brge/docker-armadillo-rserver.git"
