chore: update envvar names to agnostic names

--- a/production/armadillo-rserver-exposome/Dockerfile
+++ b/production/armadillo-rserver-exposome/Dockerfile
@@ -10,8 +10,12 @@ RUN ln -s /usr/local/lib/R/site-library/littler/examples/installBioc.r /usr/loca
 # Install dsExposome dependencies
 RUN installBioc.r rexposome
 
+# Install dsBase package
+ENV DS_DEP_VERSION "6.1.1"
+RUN installGithub.r "datashield/dsBase@${DS_DEP_VERSION}"
+
 # Install dsExposome package
-ENV DSEXPOSOME_VERSION "2.0.1"
-RUN installGithub.r "isglobal-brge/dsExposome@${DSEXPOSOME_VERSION}"
+ENV DS_PKG_VERSION "2.0.1"
+RUN installGithub.r "isglobal-brge/dsExposome@${DS_PKG_VERSION}"
 
 CMD R -e "MolgenisRserve::Rserve(debug=${DEBUG}, args='--vanilla --RS-set remote=enable --RS-set auth=disable --RS-set daemon=disable')"
