--- a/production/armadillo-rserver-omics/Dockerfile
+++ b/production/armadillo-rserver-omics/Dockerfile
@@ -1,7 +1,8 @@
 FROM datashield/armadillo-rserver:2.0.0
 
 # Install OS dependencies for dsOmics
-RUN apt-get install liblzma-dev libicu-dev libxml2 -y
+RUN apt update
+RUN apt install liblzma-dev libicu-dev libxml2 -y
 
 # Install littler to use BioConductor Manager
 RUN install2.r --error BiocManager littler --repos "https://cloud.r-project.org/"
@@ -12,9 +13,13 @@ ENV RESOURCER_VERSION "1.1.1"
 RUN install2.r --error httr --repos "https://cloud.r-project.org/"
 RUN install2.r --error "https://cloud.r-project.org/src/contrib/resourcer_${RESOURCER_VERSION}.tar.gz" --repos NULL
 
+# Install S3 resourcer
+ENV DS_DEP_S3_VERSION "HEAD"
+RUN installGithub.r "molgenis/s3.file.resourcer@${DS_DEP_S3_VERSION}" --deps=TRUE
+
 # Install dsBase package
 ENV DS_DEP_VERSION "6.1.1"
-RUN installGithub.r "datashield/dsBase@${DS_DEP_VERSION}}" --deps=TRUE
+RUN installGithub.r "datashield/dsBase@${DS_DEP_VERSION}" --deps=TRUE
 
 # Install dsOmics package
 ENV DS_PKG_VERSION "v1.0.7"
