feat: update package to dsExposome 2.0.4

--- a/production/armadillo-rserver-exposome/Dockerfile
+++ b/production/armadillo-rserver-exposome/Dockerfile
@@ -1,7 +1,8 @@
 FROM datashield/armadillo-rserver:2.0.0
 
 # Install OD dependencies
-RUN apt-get install liblzma-dev libicu-dev -y
+RUN apt update
+RUN apt install liblzma-dev libicu-dev icu-devtools -y --fix-missing
 
 # Install littler to use BioConductor Manager
 RUN install2.r --error BiocManager littler --repos "https://cloud.r-project.org/"
@@ -15,7 +16,7 @@ ENV DS_DEP_VERSION "6.1.1"
 RUN installGithub.r "datashield/dsBase@${DS_DEP_VERSION}"
 
 # Install dsExposome package
-ENV DS_PKG_VERSION "2.0.2"
+ENV DS_PKG_VERSION "2.0.4"
 RUN installGithub.r "isglobal-brge/dsExposome@${DS_PKG_VERSION}"
 
 CMD R -e "MolgenisRserve::Rserve(debug=${DEBUG}, args='--vanilla --RS-set remote=enable --RS-set auth=disable --RS-set daemon=disable')"
